--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-resume-builder",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -9,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.4",
     "@clerk/nextjs": "^6.9.6",
     "@clerk/themes": "^2.2.3",
     "mongodb": "^6.12.0",
